# rinertia

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh.md
src/: config.rs  device_discovery.rs  interrupt.rs  main.rs  momentum.rs  natural_scroll.rs  touchpad.rs  virtual_device.rs
tools/: plot_curves.py
