[package]
name = "rinertia"
version = "0.1.0"
edition = "2024"
description = "Inertial scrolling and pointer movement daemon for Linux touchpads"
license = "MIT"
repository = "https://github.com/JimMoen/rinertia"
keywords = ["touchpad", "inertia", "scroll", "evdev", "uinput"]

[dependencies]
evdev = "0.12"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
nix = { version = "0.29", features = ["ioctl"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
